# misaxx-kidney-glomeruli

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: misaxx-kidney-glomeruli-config.cmake.in  misaxx-kidney-glomeruli-segmentation-config.cmake.in  module_info.cpp.in  module_info.h.in
include/misaxx-kidney-glomeruli/: kidney_glomeruli.h  misaxx_kidney_glomeruli_module.h  module.h  module_info.h  module_interface.h
include/misaxx-kidney-glomeruli/algorithms/quantification/: quantification_base.h  quantification_constrained_klingberg.h
include/misaxx-kidney-glomeruli/algorithms/segmentation2d/: segmentation2d_base.h  segmentation2d_klingberg.h  segmentation2d_local_otsu.h
include/misaxx-kidney-glomeruli/algorithms/segmentation3d/: segmentation3d_base.h  segmentation3d_klingberg.h
include/misaxx-kidney-glomeruli/attachments/: glomeruli.h  glomerulus.h
misaxx_kidney_glomeruli/: kidney_glomeruli.cpp  kidney_glomeruli.h  kidney_glomeruli_detection_module.cpp  kidney_glomeruli_detection_module.h  kidney_glomeruli_module.cpp  kidney_glomeruli_module.h
misaxx_kidney_glomeruli/algorithms/quantification/: quantification_base.h  quantification_constrained_klingberg.cpp  quantification_constrained_klingberg.h  quantification_klingberg.cpp  quantification_klingberg.h
misaxx_kidney_glomeruli/algorithms/segmentation2d/: segmentation2d_base.h  segmentation2d_klingberg.cpp  segmentation2d_klingberg.h  segmentation2d_local_otsu.cpp  segmentation2d_local_otsu.h
misaxx_kidney_glomeruli/algorithms/segmentation3d/: segmentation3d_base.h  segmentation3d_klingberg.cpp  segmentation3d_klingberg.h
misaxx_kidney_glomeruli/attachments/: glomeruli.cpp  glomeruli.h  glomerulus.cpp  glomerulus.h
misaxx_kidney_glomeruli/metadata/: glomeruli.h  glomerulus.h
misaxx_kidney_glomeruli/quantification/: constrained_klingberg.h  klingberg.h  quantification_base.h
misaxx_kidney_glomeruli/segmentation2d/: klingberg.h  local_otsu.h  segmentation2d_base.h
misaxx_kidney_glomeruli/segmentation3d/: klingberg.h  segmentation3d_base.h
src/: main.cpp
src/misaxx-kidney-glomeruli/: kidney_glomeruli.cpp  misaxx_kidney_glomeruli_module.cpp  module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-kidney-glomeruli/algorithms/quantification/: quantification_base.h  quantification_constrained_klingberg.cpp  quantification_constrained_klingberg.h  quantification_klingberg.cpp  quantification_klingberg.h  quantification_klingberg_2d.cpp  quantification_klingberg_2d.h
src/misaxx-kidney-glomeruli/algorithms/segmentation2d/: segmentation2d_base.h  segmentation2d_klingberg.cpp  segmentation2d_klingberg.h  segmentation2d_local_otsu.cpp  segmentation2d_local_otsu.h
src/misaxx-kidney-glomeruli/algorithms/segmentation3d/: segmentation3d_base.h  segmentation3d_klingberg.cpp  segmentation3d_klingberg.h  segmentation3d_klingberg_naive.cpp  segmentation3d_klingberg_naive.h
src/misaxx-kidney-glomeruli/attachments/: glomeruli.cpp  glomerulus.cpp
